Add test_car to database
